--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -13,6 +13,8 @@
   font-weight: bolder;
   border: none;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
 
   &:hover {
     background-color: white;
@@ -20,7 +22,7 @@
     border: 1px solid black;
   }
 
-  &.google-sign-in {
+  &:google-sign-in {
     background-color: #4285f4;
     color: #fff;
 
@@ -28,6 +30,19 @@
       background-color:  #557ae8;
       border: none;
     }
+  }
+
+  &:inverted {
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+
+    &:hover {
+      background-color: black;
+      color: white;
+      border: none;
+    }
+
   }
 
 }
