--- a/src/components/sign-in/sign-in.styles.scss
+++ b/src/components/sign-in/sign-in.styles.scss
@@ -11,4 +11,21 @@
         display: flex;
         justify-content: space-between;
     }
+    
+    @media(max-width: 767px) { 
+        width: 100%;
+
+        .form-input {
+            padding: 0;
+        }
+
+        .form-input-label {
+            padding: 0;
+        }
+
+        button {
+            margin-bottom: 16px;
+            width: 100%;
+        }
+    }
 }
