--- a/src/components/directory/directory.styles.scss
+++ b/src/components/directory/directory.styles.scss
@@ -3,8 +3,11 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  padding-top: 32px;
+  padding-bottom: 16px;
 
   @media(max-width: 767px) {
     flex-flow: column;
+    padding-top: 96px;
   }
 }
