--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -1,29 +1,48 @@
 .cart-dropdown {
-  position: absolute;
-  width: 240px;
-  height: 340px;
-  display: flex;
-  flex-direction: column;
-  padding: 20px;
-  border: 1px solid black;
-  background-color: white;
-  top: 90px;
-  right: 40px;
-  z-index: 5;
-
-  .empty-message {
-    font-size:  18px;
-    margin: 50px auto;
-  }
-
-  .cart-items {
-    height: 240px;
+    position: absolute;
+    width: 240px;
+    height: 340px;
     display: flex;
     flex-direction: column;
-    overflow: scroll;
-  }
+    padding: 20px;
+    border: 1px solid #ebd9ae;
+    background-color: white;
+    top: 90px;
+    right: 40px;
+    z-index: 5;
 
-  button {
-    margin-top: auto;
-  }
+    .empty-message {
+        font-size: 18px;
+        margin: 50px auto;
+        color: #ebd9ae;
+    }
+
+    .cart-items {
+        height: 240px;
+        display: flex;
+        flex-direction: column;
+        overflow: scroll;
+    }
+
+    .cart-item {
+        .item-details {
+            .name, .price {
+                color: #ebd9ae;
+                font-size: 18px;
+                letter-spacing: 0.5px;
+            }
+        }
+    }
+
+    .custom-button {
+        margin-top: auto;
+        background-color: #fff;
+        color: #ebd9ae; 
+        border: 1px solid #ebd9ae;
+        &:hover {
+            border: 1px solid #000;
+            background-color: #000;
+            color: #fff;
+        }
+    }
 }
