--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -5,7 +5,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid black;
   margin: 0 7.5px 15px;
   background-position: center;
   background-size: cover;
@@ -45,12 +44,12 @@
 
   .content {
     height: 90px;
-    padding: 0 25px;
+    padding: 0 64px 0 64px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: 1px solid black;
+    border: 1px solid #ebd9ae;
     background-color: #fff;
     opacity: 0.7;
     position: absolute;
@@ -58,14 +57,15 @@
 
     .title {
       font-weight: bold;
-      margin-bottom: 6px;
+      margin-bottom: 0;
       font-size: 22px;
-      color: #4a4a4a;
+      color:#ebd9ae;
     }
 
     .subtitle {
       font-weight: lighter;
       font-size: 16px;
+      color: #ebd9ae;
     }
   }
 
