--- a/src/pages/sign-in-and-sign-up/sign-in-and-sign-up.styles.scss
+++ b/src/pages/sign-in-and-sign-up/sign-in-and-sign-up.styles.scss
@@ -1,10 +1,19 @@
 .sign-in-and-sign-up {
-    width: 850px;
-    display: flex;
-    justify-content: space-between;
-    margin: 30px auto;
-    @media(max-width: 767px) {
-        flex-flow: column;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    @media(max-width: 991px) {
+        grid-template-columns: 1fr;
+    }
+
+    .custom-button {
+        border: 1px solid #ebd9ae;
+        color: #ebd9ae;
+        background-color: #fff;
+        &:hover {
+            background-color: #000;
+            border: 1px solid #000;
+            color: #fff;
+        }
     }
 }
 
